.metadata/.plugins/org.eclipse.cdt.ui/sotri-tp3_03-application.build.log
11:00:19 **** Incremental Build of configuration Debug for project sotri-tp3_03-application ****
make -j12 all 
arm-none-eabi-gcc "../app/src/task_entry_a.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/javie/OneDrive/Documentos/FIUBA/RTOS_I/kernel_panic_rtos-tp3/tp3/sotri-tp3_03-application/app/inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"app/src/task_entry_a.d" -MT"app/src/task_entry_a.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "app/src/task_entry_a.o"
arm-none-eabi-gcc "../app/src/task_exit_a.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Middlewares/Third_Party/FreeRTOS/Source/include -I../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS -I../Middlewares/Third_Party/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -I"C:/Users/javie/OneDrive/Documentos/FIUBA/RTOS_I/kernel_panic_rtos-tp3/tp3/sotri-tp3_03-application/app/inc" -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"app/src/task_exit_a.d" -MT"app/src/task_exit_a.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "app/src/task_exit_a.o"
In file included from ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.h:60,
                 from ../app/src/task_exit_a.c:38:
../app/src/task_exit_a.c: In function 'task_exit_a':
../app/src/task_exit_a.c:131:56: error: 'h_go_b_bin_sem' undeclared (first use in this function); did you mean 'h_exit_b_bin_sem'?
  131 |                                         xSemaphoreGive(h_go_b_bin_sem);
      |                                                        ^~~~~~~~~~~~~~
../Middlewares/Third_Party/FreeRTOS/Source/include/semphr.h:447:88: note: in definition of macro 'xSemaphoreGive'
  447 | #define xSemaphoreGive( xSemaphore )            xQueueGenericSend( ( QueueHandle_t ) ( xSemaphore ), NULL, semGIVE_BLOCK_TIME, queueSEND_TO_BACK )
      |                                                                                        ^~~~~~~~~~
../app/src/task_exit_a.c:131:56: note: each undeclared identifier is reported only once for each function it appears in
  131 |                                         xSemaphoreGive(h_go_b_bin_sem);
      |                                                        ^~~~~~~~~~~~~~
../Middlewares/Third_Party/FreeRTOS/Source/include/semphr.h:447:88: note: in definition of macro 'xSemaphoreGive'
  447 | #define xSemaphoreGive( xSemaphore )            xQueueGenericSend( ( QueueHandle_t ) ( xSemaphore ), NULL, semGIVE_BLOCK_TIME, queueSEND_TO_BACK )
      |                                                                                        ^~~~~~~~~~
../app/src/task_entry_a.c: In function 'task_entry_a':
../app/src/task_entry_a.c:139:49: error: 'vehiculo_cruzo' undeclared (first use in this function)
  139 |                                                 vehiculo_cruzo = 1; // Bandera para romper el bucle while y permitir avanzar
      |                                                 ^~~~~~~~~~~~~~
../app/src/task_entry_a.c:139:49: note: each undeclared identifier is reported only once for each function it appears in
../app/src/task_exit_a.c:139:56: error: 'h_go_a_bin_sem' undeclared (first use in this function); did you mean 'h_exit_a_bin_sem'?
  139 |                                         xSemaphoreGive(h_go_a_bin_sem);
      |                                                        ^~~~~~~~~~~~~~
../Middlewares/Third_Party/FreeRTOS/Source/include/semphr.h:447:88: note: in definition of macro 'xSemaphoreGive'
  447 | #define xSemaphoreGive( xSemaphore )            xQueueGenericSend( ( QueueHandle_t ) ( xSemaphore ), NULL, semGIVE_BLOCK_TIME, queueSEND_TO_BACK )
      |                                                                                        ^~~~~~~~~~
In file included from ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS/cmsis_os.h:60,
                 from ../app/src/task_entry_a.c:38:
../app/src/task_entry_a.c:146:56: error: 'h_go_a_bin_sem' undeclared (first use in this function); did you mean 'h_exit_a_bin_sem'?
  146 |                                         xSemaphoreTake(h_go_a_bin_sem, portMAX_DELAY);
      |                                                        ^~~~~~~~~~~~~~
../Middlewares/Third_Party/FreeRTOS/Source/include/semphr.h:289:88: note: in definition of macro 'xSemaphoreTake'
  289 | #define xSemaphoreTake( xSemaphore, xBlockTime )                xQueueSemaphoreTake( ( xSemaphore ), ( xBlockTime ) )
      |                                                                                        ^~~~~~~~~~
make: *** [app/src/subdir.mk:46: app/src/task_exit_a.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [app/src/subdir.mk:46: app/src/task_entry_a.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

11:00:20 Build Failed. 7 errors, 0 warnings. (took 921ms)

